[metadata]
name = hivemind
author = ARDC Nectar Cloud Services
author_email = coreservices@ardc.edu.au
license = Apache-2.0
summary = Collection of fabric tools for NeCTAR.
description_file =
    README.rst
keywords = hivemind
home_page = https://github.com/NeCTAR-RC/python-hivemind
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.12

[files]
packages = hivemind
include_package_data = True

[pbr]
skip_changelog=true
skip_authors=true

[entry_points]
console_scripts =
    hivemind = hivemind.common:main_plus
    sixpack = hivemind.common:main

hivemind.packages =
    default = hivemind
